@@ -1,3 +1,9 @@
+Oct 11 2012
+    Switch off JavaScript in the Preview if necessary
+
+Aug 29 2012
+    Quickly search word under cursor
+
 Aug 27 2012
     Preview reStructuredText
 
